--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -348,7 +348,7 @@
         }
 
         &__title {
-            gap: 2px;
+            gap: 4px;
         }
 
         &__age {
@@ -358,16 +358,16 @@
 
         &__job {
             span {
-                font-size: 12px;
+                font-size: 13px;
             }
 
             span:first-child {
-                font-size: 14px;
+                font-size: 16px;
             }
         }
 
         &__text span {
-            font-size: 12px;
+            font-size: 13px;
             max-height: 131px;
         }
     }
