--- a/src/screens/Screen4/Screen4.module.scss
+++ b/src/screens/Screen4/Screen4.module.scss
@@ -3,13 +3,13 @@
     width: 100vw;
     overflow: hidden;
     overflow-y: scroll;
+
     background-color: rgba($color: #000000, $alpha: .8);
     position: fixed;
     top: 0;
     left: 0;
     z-index: 9;
     opacity: 0;
-
 
     .educImgM {
         display: none;
@@ -903,5 +903,13 @@
         height: 473px;
     }
 
+    .btm .btn {
+        height: 40px;
+    }
 
+
+}
+
+.hiddenScroll {
+    scrollbar-gutter: stable;
 }
